# paradoxpatcher

./: .gitignore  Cargo.toml  LICENSE  README.md  convert_all.sh  merger.toml  paradox_merger.py
.github/workflows/: build-cli.yml  build-gui.yml  rust-test.yml
python_code/: paradox_merger.py
src/: configs.rs  error.rs  io.rs  lib.rs  main.rs  merge_diff.rs  merge_script.py  merge_script.rs  mod_information.rs  moddata.rs  text_encoding.rs
src/io/: encodings.rs  files.rs  re.rs  zips.rs
src/moddata/: mod_conflict.rs  mod_info.rs  mod_pack.rs
