[package]
name = "paradoxmerger"
version = "0.3.0"
authors = ["Parker Okonek <parkerokonek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidiff = "0.3"
toml = "0.5"
zip = "0.5"
clap = {version = "2", optional = true}
serde = {version = "1.0", features = ["derive"]}
regex = "1"
encoding = "0.2"
diff_match_patch = "0.1"
lazy_static = "1.4"
directories = "3.0"
linked-hash-map = "0.5"

[dependencies.gtk]
version = "0.9"
features = ["v3_16"]
optional = true

[dependencies.gio]
version = "0.9"
features = ["v2_44"]
optional = true

[features]
command-line = ["clap"]
gui-interface= ["gtk","gio"]

[[bin]]
name = "merger-cli"
required-features = ["command-line"]

[[bin]]
name = "merger-gui"
required-features = ["gui-interface"]