[package]
name = "paradoxmerger"
version = "0.3.0"
authors = ["Parker Okonek <parkerokonek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unidiff = "0.3"
toml = "0.5"
zip = "0.5"
clap = {version = "2", optional = true}
serde = {version = "1.0", features = ["derive"]}
regex = "1"
encoding = "0.2"
diff_match_patch = "0.1"
lazy_static = "1.4"
directories = "3.0"
linked-hash-map = "0.5"
serde_json = "1.0"
vgtk = {version = "0.3", optional = true}
pretty_env_logger = {version = "0.4", optional = true}
fxhash = "0.2"

[features]
command-line = ["clap"]
gui-interface= ["vgtk","pretty_env_logger"]

[[bin]]
name = "merger-cli"
required-features = ["command-line"]

[[bin]]
name = "merger-gui"
required-features = ["gui-interface"]